# cr8s

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/2024-10-07-164441_create_rustaceans/: up.sql
migrations/2024-10-07-164454_create_crates/: up.sql
migrations/2025-01-28-233603_create_rustaceans/: up.sql
migrations/2025-01-28-233613_create_crates/: up.sql
migrations/2025-02-01-150022_create_users/: up.sql
migrations/2025-02-01-150028_create_roles/: up.sql
migrations/2025-02-01-150034_create_user_roles/: up.sql
migrations/YYYY-MM-DD-HHMMSS_add_created_at_to_user_roles/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  repositories.rs  repository.rs  schema.rs
src/models/: crates.rs  roles.rs  rustaceans.rs  user_roles.rs  users.rs
src/repositories/: crates.rs  roles.rs  rustaceans.rs  user_roles.rs  users.rs
src/rocket_routes/: crates.rs  rustaceans.rs
tests/: crates.rs  rustaceans.rs
