[package]
name = "cr8s"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["diesel_postgres"] }
serde = "1.0"
serde_json = "1.0"
[dev-dependencies]
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
tokio = { version = "1.43.0", features = ["full"] }
